--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -37,59 +37,59 @@
     <string name="java">JavaScript চালু করুন</string>
     <string name="download">ডাউনলোডের স্থান</string>
     <string name="size">লেখার আকার</string>
-    <string name="search">Search Engine</string>
-    <string name="search_hint">Search</string>
-    <string name="action_delete">Delete</string>
-    <string name="action_delete_all">Delete All</string>
-    <string name="action_blank">Blank Page</string>
-    <string name="agent_chrome">Chrome (PC)</string>
-    <string name="agent_ie">IE 11 (PC)</string>
-    <string name="agent_iphone">Safari (iPhone)</string>
-    <string name="agent_symbian">Nokia Browser</string>
-    <string name="agent_custom">Custom</string>
-    <string name="title_search_engine">Search Engine</string>
-    <string name="action_ok">OK</string>
-    <string name="dialog_download">Do you want to download this file?</string>
-    <string name="action_cancel">Cancel</string>
-    <string name="title_warning">Warning</string>
-    <string name="title_user_agent">User-Agent</string>
-    <string name="title_custom_homepage">Custom Homepage</string>
-    <string name="action_webpage">Webpage</string>
-    <string name="action_yes">OK</string>
-    <string name="action_no">Cancel</string>
-    <string name="title_text_size">Text Size</string>
-    <string name="size_largest">Largest</string>
-    <string name="size_large">Large</string>
-    <string name="size_normal">Normal</string>
-    <string name="size_small">Small</string>
-    <string name="size_smallest">Smallest</string>
-    <string name="hint_title">Title</string>
-    <string name="hint_url">URL</string>
-    <string name="hint_folder">Folder</string>
-    <string name="title_edit_bookmark">Edit Bookmark</string>
-    <string name="action_edit">Edit This</string>
-    <string name="action_incognito">Incognito Mode</string>
-    <string name="action_find">Find in Page</string>
-    <string name="download_pending">Starting download\u2026</string>
-    <string name="cannot_download">Only \"http\" or \"https\" URLs can be downloaded.</string>
-    <string name="download_no_sdcard_dlg_title">No SD card</string>
-    <string name="download_no_sdcard_dlg_msg">USB storage is required to download the file.</string>
-    <string name="download_sdcard_busy_dlg_title">USB storage unavailable</string>
-    <string name="download_sdcard_busy_dlg_msg">The storage is busy. To allow downloads, touch Turn Off USB Storage in the notification.</string>
-    <string name="message_import">Bookmarks imported</string>
-    <string name="custom_url">Custom URL</string>
-    <string name="baidu_url">Baidu</string>
+    <string name="search">অনুসন্ধান ইঞ্জিন</string>
+    <string name="search_hint">অনুসন্ধান</string>
+    <string name="action_delete">মুছুন</string>
+    <string name="action_delete_all">সব মুছে ফেলুন</string>
+    <string name="action_blank">খালি পেজ</string>
+    <string name="agent_chrome">ক্রোম (পিসি)</string>
+    <string name="agent_ie">ইন্টারনেট এক্সপ্লোরার (পিসি)</string>
+    <string name="agent_iphone">সাফারি (আইফোন)</string>
+    <string name="agent_symbian">নকিয়া ব্রাউজার</string>
+    <string name="agent_custom">স্বনির্ধারিত</string>
+    <string name="title_search_engine">অনুসন্ধান ইঞ্জিন</string>
+    <string name="action_ok">আচ্ছা</string>
+    <string name="dialog_download">এই ফাইলটি ডাউনলোড করতে চান?</string>
+    <string name="action_cancel">বাতিল</string>
+    <string name="title_warning">সতর্কবাণী</string>
+    <string name="title_user_agent">ব্যবহারকারী এজেন্ট</string>
+    <string name="title_custom_homepage">স্বনির্ধারিত নীড়পাতা</string>
+    <string name="action_webpage">ওয়েবপেজ</string>
+    <string name="action_yes">হ্যা</string>
+    <string name="action_no">না</string>
+    <string name="title_text_size">লেখার আকার</string>
+    <string name="size_largest">বিশাল</string>
+    <string name="size_large">বড়</string>
+    <string name="size_normal">সাধারণ</string>
+    <string name="size_small">ছোট</string>
+    <string name="size_smallest">ক্ষুদ্র</string>
+    <string name="hint_title">শিরোনাম</string>
+    <string name="hint_url">ইউআরএল</string>
+    <string name="hint_folder">ফোল্ডার</string>
+    <string name="title_edit_bookmark">বুকমার্ক সম্পাদনা</string>
+    <string name="action_edit">সম্পাদন করুন</string>
+    <string name="action_incognito">ছদ্মবেশী মোড</string>
+    <string name="action_find">পেজের মধ্যে খুঁজুন</string>
+    <string name="download_pending">ডাউনলোড শুরু হচ্ছে \u2026</string>
+    <string name="cannot_download">শুধুমাত্র \"http\" এবং \"https\" ইউআরএলের ফাইল ডাউনলোড করা যাবে</string>
+    <string name="download_no_sdcard_dlg_title">কোন মেমোরি কার্ড নেই</string>
+    <string name="download_no_sdcard_dlg_msg">ফাইল ডাউনলোড করতে ইউএসবি স্টোরেজ প্রয়োজন</string>
+    <string name="download_sdcard_busy_dlg_title">ইউএসবি স্টোরেজ পাওয়া যায়নি</string>
+    <string name="download_sdcard_busy_dlg_msg">স্টোরেজটি ব্যস্ত রয়েছে, ডাউনলোড করতে নোটিফিকেশন বার থেকে "Turn Off USB Storage" নির্বাচন করুন</string>
+    <string name="message_import">ব্যাকআপ থেকে বুকমার্ক ফিরিয়ে আনা হয়েছে</string>
+    <string name="custom_url">স্বনির্ধারিত ইউআরএল</string>
+    <string name="baidu_url">Baido</string>
     <string name="shenma_url">ShenMa</string>
     <string name="bing_url">Bing</string>
     <string name="haosou_url">Haosou</string>
     <string name="duckduckgo_url">DuckDuckGo</string>
-    <string name="startpage_url">StartPage</string>
+    <string name="startpage_url">শুরুর পেজ</string>
     <string name="ask_url">Ask</string>
     <string name="yahoo_url">Yahoo</string>
     <string name="yandex_url">Yandex</string>
     <string name="google_url">Google</string>
     <string name="sougou_url">Sougou</string>
-    <string name="block_ads">Block Ads</string>
+    <string name="block_ads">বিজ্ঞাপন বন্ধ করুন</string>
     <string name="message_untrusted_certificate">The certificate of the site isn\'t trusted. Proceed anyway?</string>
     <string name="title_form_resubmission">Form Resubmission</string>
     <string name="message_form_resubmission">Would you like to resend the data?</string>
