Added Bengali translations up to line 130.

--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -78,7 +78,7 @@
     <string name="download_sdcard_busy_dlg_msg">স্টোরেজটি ব্যস্ত রয়েছে, ডাউনলোড করতে নোটিফিকেশন বার থেকে "Turn Off USB Storage" নির্বাচন করুন</string>
     <string name="message_import">ব্যাকআপ থেকে বুকমার্ক ফিরিয়ে আনা হয়েছে</string>
     <string name="custom_url">স্বনির্ধারিত ইউআরএল</string>
-    <string name="baidu_url">Baido</string>
+    <string name="baidu_url">Baidu</string>
     <string name="shenma_url">ShenMa</string>
     <string name="bing_url">Bing</string>
     <string name="haosou_url">Haosou</string>
@@ -90,44 +90,44 @@
     <string name="google_url">Google</string>
     <string name="sougou_url">Sougou</string>
     <string name="block_ads">বিজ্ঞাপন বন্ধ করুন</string>
-    <string name="message_untrusted_certificate">The certificate of the site isn\'t trusted. Proceed anyway?</string>
-    <string name="title_form_resubmission">Form Resubmission</string>
-    <string name="message_form_resubmission">Would you like to resend the data?</string>
-    <string name="message_location">\nWould like to use your location</string>
-    <string name="action_allow">Allow</string>
-    <string name="action_dont_allow">Refuse</string>
-    <string name="title_sign_in">Sign in</string>
-    <string name="hint_username">Username</string>
-    <string name="hint_password">Password</string>
-    <string name="untitled">Untitled</string>
-    <string name="image_auto">Show images only via Wi-Fi</string>
-    <string name="image_on">Show images</string>
-    <string name="image_off">Block images</string>
-    <string name="title_file_chooser">File chooser</string>
-    <string name="import_backup">Import bookmarks</string>
-    <string name="bookmark_export_path">Bookmarks exported to\n</string>
-    <string name="import_bookmark_error">Couldn\'t import bookmarks from file</string>
-    <string name="feedback">Feedback</string>
-    <string name="message_add_bookmark">Bookmark added successfully</string>
-    <string name="message_exit">Press one more time to exit</string>
-    <string name="web_screenshot">Web Page Screenshot</string>
-    <string name="screenshot_all">All</string>
-    <string name="screenshot_now">Visible</string>
-    <string name="dialog_message">Message</string>
-    <string name="toast_wait_a_minute">Wait a moment&#8230;</string>
-    <string name="toast_save_to">Save file to: </string>
-    <string name="toast_operation_failed">The operation failed</string>
-    <string name="toast_operation_done">The operation done</string>
-    <string name="volume">Volume Keys to Scroll</string>
-    <string name="intent">Allow Website to Open Your App</string>
-    <string name="msg_intent">Allow Website to open your app?</string>
-    <string name="dialog_adblock">Default Block: Use internal hosts.txt to Block Ads\n\nCustom Block: Use external hosts.txt, which will be downloaded if it doesn\'t exist.</string>
-    <string name="dialog_adblock_default">Default Block</string>
-    <string name="dialog_adblock_custom">Custom Block</string>
+    <string name="message_untrusted_certificate">সাইটের সার্টিফিকেট বিশ্বস্ত নয়। তবুও যেতে চান?</string>
+    <string name="title_form_resubmission">ফরম পুনঃজমাদান</string>
+    <string name="message_form_resubmission">ফরমটি নতুন করে জমা দিতে চান?</string>
+    <string name="message_location">\n সাইটটি আপনার অবস্থান জানতে চায়।</string>
+    <string name="action_allow">অনুমতি দিন</string>
+    <string name="action_dont_allow">বাতিল করুন</string>
+    <string name="title_sign_in">প্রবেশ করুন</string>
+    <string name="hint_username">ইউজারনেম</string>
+    <string name="hint_password">পাসওয়ার্ড</string>
+    <string name="untitled">নামহীন</string>
+    <string name="image_auto">শুধুমাত্র WiFi সংযোগে ছবি প্রদর্শন</string>
+    <string name="image_on">চিত্র প্রদর্শন</string>
+    <string name="image_off">চিত্র বন্ধ</string>
+    <string name="title_file_chooser">ফাইল বাছাই</string>
+    <string name="import_backup">ব্যাকআপ থেকে বুকমার্ক নিয়ে আসুন</string>
+    <string name="bookmark_export_path">\n লোকেশনে বুকমার্কগুলো ব্যাকআপ করা হয়েছে</string>
+    <string name="import_bookmark_error">ব্যাকআপ ফাইলটি থেকে বুকমার্ক নিয়ে আসা যায়নি</string>
+    <string name="feedback">মতামত/পরামর্শ</string>
+    <string name="message_add_bookmark">বুকমার্কে যোগ করা হয়েছে</string>
+    <string name="message_exit">বের হয়ে যেতে আরেকবার চাপুন</string>
+    <string name="web_screenshot">ওয়েবপেজের স্ক্রিনশট</string>
+    <string name="screenshot_all">পুরোটা</string>
+    <string name="screenshot_now">দৃশ্যমান</string>
+    <string name="dialog_message">বার্তা</string>
+    <string name="toast_wait_a_minute">একটু অপেক্ষা করুন&#8230;</string>
+    <string name="toast_save_to">ফাইলটি সেইভ করুন</string>
+    <string name="toast_operation_failed">কাজটি করা যায়নি</string>
+    <string name="toast_operation_done">কাজটি সম্পন্ন হয়েছে</string>
+    <string name="volume">ভলিউম বাটনের মাধ্যমে পেজের উপর/নিচে যান</string>
+    <string name="intent">অ্যাপ চালুর অনুমতি</string>
+    <string name="msg_intent">ওয়েবসাইটিকে একটি অ্যাপ চালুর অনুমতি দিতে চান?</string>
+    <string name="dialog_adblock">সাধারণ ব্লক: অভ্যন্তরীণ hosts.txt ফাইলের মাধ্যমে বিজ্ঞাপন বন্ধ করুন\n\nবিশেষ ব্লক: আলাদা পরিবর্তনযোগ্য hosts.txt ফাইলের মাধ্যমে বিজ্ঞাপন বন্ধ করুন। ফাইলটি না থাকলে ডাউনলোড করা হবে।</string>
+    <string name="dialog_adblock_default">সাধারণ ব্লক</string>
+    <string name="dialog_adblock_custom">বিশেষ ব্লক</string>
     <string name="dialog_adblock_download">It will be automatically selected after download.\n\npath:</string>
-    <string name="dialog_adblock_custom_hint">\nPlease don\'t change the file\'s path or name. You can edit this file to customize your own block list.</string>
-    <string name="setting_default">Set as Default Browser</string>
-    <string name="toast_clear_defaults">Please clear defaults</string>
+    <string name="dialog_adblock_custom_hint">\nআপনি ফাইলটির নাম এবং অবস্থান ঠিক রেখে তথ্য পরিবর্তন করে নিজের মতো ব্লকলিস্ট তৈরি করতে পারেন।</string>
+    <string name="setting_default">সাধারণ ব্রাউজার বানান</string>
+    <string name="toast_clear_defaults">সাধারণ নিয়মগুলো মুছে ফেলুন</string>
     <string name="toast_copy_url_successful">Link copied successfully</string>
     <string name="toast_copy_text_successful">Text copied successfully</string>
     <string name="incognito_on">You\'ve gone incognito</string>
