Added translations up to line 170.

--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -128,46 +128,46 @@
     <string name="dialog_adblock_custom_hint">\nআপনি ফাইলটির নাম এবং অবস্থান ঠিক রেখে তথ্য পরিবর্তন করে নিজের মতো ব্লকলিস্ট তৈরি করতে পারেন।</string>
     <string name="setting_default">সাধারণ ব্রাউজার বানান</string>
     <string name="toast_clear_defaults">সাধারণ নিয়মগুলো মুছে ফেলুন</string>
-    <string name="toast_copy_url_successful">Link copied successfully</string>
-    <string name="toast_copy_text_successful">Text copied successfully</string>
-    <string name="incognito_on">You\'ve gone incognito</string>
-    <string name="incognito_off">Incognito off</string>
-    <string name="operation_none">None</string>
-    <string name="operation_reload">Reload</string>
-    <string name="operation_top">Scroll to top</string>
-    <string name="operation_bottom">Scroll to bottom</string>
-    <string name="operation_input">Input URL</string>
-    <string name="operation_newtab">New Tab</string>
-    <string name="operation_addbookmark">Add bookmark</string>
-    <string name="operation_openbookmark">Open bookmark</string>
-    <string name="operation_openhistory">Open history</string>
-    <string name="operation_closetab">Close tab</string>
-    <string name="operation_lasttab">Last tab</string>
-    <string name="operation_nexttab">Next tab</string>
-    <string name="operation_goback">Go back</string>
-    <string name="operation_goforward">Go forward</string>
-    <string name="operation_find">Find in Page</string>
-    <string name="settings_ad_rules">Marked Ads</string>
-    <string name="settings_operation">Gestures</string>
-    <string name="settings_privacy">Privacy</string>
-    <string name="settings_advanced">Advanced</string>
-    <string name="settings_about">About</string>
-    <string name="url_box">URL Box Contents</string>
-    <string name="url_box_domain">Domain</string>
-    <string name="url_box_url">URL</string>
-    <string name="url_box_title">Title</string>
-    <string name="action_pcview">Desktop site</string>
-    <string name="action_source">View source</string>
-    <string name="action_translate">Translate</string>
-    <string name="title_edit_folder">Edit Folder</string>
-    <string name="msg_delete_folder">Delete this folder?</string>
-    <string name="desc_suggestion">suggestion</string>
-    <string name="desc_search">find in page</string>
-    <string name="desc_reload">reload</string>
-    <string name="desc_back">back</string>
-    <string name="desc_forward">forward</string>
-    <string name="desc_home">home</string>
-    <string name="desc_tab">tab</string>
+    <string name="toast_copy_url_successful">লিংক কপি হয়েছে</string>
+    <string name="toast_copy_text_successful">লেখা কপি করা হয়েছে</string>
+    <string name="incognito_on">ছদ্মবেশী মোড চালু</string>
+    <string name="incognito_off">ছদ্মবেশী মোড বন্ধ</string>
+    <string name="operation_none">কোনোটাই না</string>
+    <string name="operation_reload">রিলোড</string>
+    <string name="operation_top">পাতার শুরুতে যান</string>
+    <string name="operation_bottom">পাতার শেষে যান</string>
+    <string name="operation_input">ইউআরএল লিখুন</string>
+    <string name="operation_newtab">নতুন ট্যাব</string>
+    <string name="operation_addbookmark">বুকমার্ক যোগ</string>
+    <string name="operation_openbookmark">বুকমার্কসমূহ</string>
+    <string name="operation_openhistory">ইতিহাস</string>
+    <string name="operation_closetab">ট্যাব বন্ধ</string>
+    <string name="operation_lasttab">সর্বশেষ ট্যাব</string>
+    <string name="operation_nexttab">পরবর্তী ট্যাব</string>
+    <string name="operation_goback">ফিরে যান</string>
+    <string name="operation_goforward">সামনে যান</string>
+    <string name="operation_find">পাতায় খুঁজুন</string>
+    <string name="settings_ad_rules">চিন্হিত বিজ্ঞাপন</string>
+    <string name="settings_operation">ইশারাসমূহ</string>
+    <string name="settings_privacy">গোপনীয়তা</string>
+    <string name="settings_advanced">বিশেষ সেটিংস</string>
+    <string name="settings_about">অ্যাপ সম্পর্কে</string>
+    <string name="url_box">ইউআরএল বক্সের তথ্য</string>
+    <string name="url_box_domain">ডোমেইন</string>
+    <string name="url_box_url">ইউআরএল</string>
+    <string name="url_box_title">শিরোনাম</string>
+    <string name="action_pcview">কম্পিউটার সাইট</string>
+    <string name="action_source">সোর্সকোড</string>
+    <string name="action_translate">অনুবাদ</string>
+    <string name="title_edit_folder">ফোল্ডার সম্পাদনা</string>
+    <string name="msg_delete_folder">ফোল্ডারটি ডিলিট করতে চান?</string>
+    <string name="desc_suggestion">শব্দ পরামর্শ</string>
+    <string name="desc_search">পাতায় কোন শব্দ/বাক্য খুঁজুন</string>
+    <string name="desc_reload">পুনরায় পাতাটি লোড করুন</string>
+    <string name="desc_back">আগের পাতায় ফিরে যান</string>
+    <string name="desc_forward">সামনের পাতায় যান</string>
+    <string name="desc_home">নীড়পাতা</string>
+    <string name="desc_tab">ট্যাবসমূহ</string>
     <string name="desc_menu">menu</string>
     <string name="desc_filedic">file</string>
     <string name="desc_other">other</string>
