Added translation up to line 200

--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -168,37 +168,37 @@
     <string name="desc_forward">সামনের পাতায় যান</string>
     <string name="desc_home">নীড়পাতা</string>
     <string name="desc_tab">ট্যাবসমূহ</string>
-    <string name="desc_menu">menu</string>
-    <string name="desc_filedic">file</string>
-    <string name="desc_other">other</string>
-    <string name="msg_setgoogle">Set Google as a default search engine?</string>
-    <string name="action_mark">Mark as Ad</string>
-    <string name="settings_block">AdBlock</string>
-    <string name="dialog_confirm_block">Would you like to mark this as ad?</string>
-    <string name="do_not_track">Do not Track</string>
-    <string name="get_more_rules">Get More Rules</string>
-    <string name="add_rule">Add Rule</string>
-    <string name="hint_tags">Tags</string>
-    <string name="clear_ad_rules">Clear All Ad Rules</string>
-    <string name="color_mode">Color Mode</string>
-    <string name="dialog_sure">Are you sure you want to do this?</string>
-    <string name="action_send_to_launcher">Send to the Launcher</string>
-    <string name="settings_cloud">Account</string>
-    <string name="user">Log in/Sign up</string>
-    <string name="user_syns">Sync</string>
-    <string name="user_update">Upload</string>
-    <string name="log_in_success">Log in successful</string>
-    <string name="wrong_psw">Wrong password</string>
-    <string name="sign_up_success">Sign up successful</string>
-    <string name="code_500">Service unavailable</string>
-    <string name="syns_success">Sync Complete</string>
-    <string name="upload_success">Upload Complete</string>
-    <string name="log_out">Log out?</string>
-    <string name="crash_info">Something went wrong :(</string>
-    <string name="crash_restart">Restart</string>
-    <string name="crash_close">Close</string>
-    <string name="crash_upload">Upload the crash log</string>
-    <string name="upload_completed">Upload completed :)</string>
+    <string name="desc_menu">মেনু</string>
+    <string name="desc_filedic">ফাইল</string>
+    <string name="desc_other">অন্যান্য</string>
+    <string name="msg_setgoogle">সার্চ ইঞ্জিন হিসেবে Google কে নির্বাচন করবেন?</string>
+    <string name="action_mark">বিজ্ঞাপন হিসেবে চিন্হিত করুন</string>
+    <string name="settings_block">বিজ্ঞাপন ব্লক</string>
+    <string name="dialog_confirm_block">বিজ্ঞাপন হিসেবে চিন্হিত করবেন?</string>
+    <string name="do_not_track">নজরদারি বন্ধ করুন</string>
+    <string name="get_more_rules">আরো নিয়মকানুন ডাউনলোড করুন</string>
+    <string name="add_rule">নিয়ম যোগ করুন</string>
+    <string name="hint_tags">ট্যাগ</string>
+    <string name="clear_ad_rules">সব নিয়ম মুছে ফেলুন</string>
+    <string name="color_mode">রঙিন মোড</string>
+    <string name="dialog_sure">আপনি কি নিশ্চিত?</string>
+    <string name="action_send_to_launcher">লঞ্চারে পাঠান</string>
+    <string name="settings_cloud">অ্যাকাউন্ট</string>
+    <string name="user">প্রবেশ/নিবন্ধন</string>
+    <string name="user_syns">ব্যাকআপ ডাউনলোড</string>
+    <string name="user_update">ব্যাকআপ আপলোড</string>
+    <string name="log_in_success">সফলভাবে প্রবেশ করেছেন</string>
+    <string name="wrong_psw">ভুল পাসওয়ার্ড</string>
+    <string name="sign_up_success">সফলভাবে নিবন্ধিত</string>
+    <string name="code_500">সেবা দেয়া যাচ্ছে না</string>
+    <string name="syns_success">ডাউনলোড সম্পন্ন হয়েছে</string>
+    <string name="upload_success">আপলোড সম্পন্ন হয়েছে</string>
+    <string name="log_out">বের হোন</string>
+    <string name="crash_info">কিছু একটা সমস্যা হয়েছে :(</string>
+    <string name="crash_restart">পুনঃসঞ্চালন</string>
+    <string name="crash_close">বন্ধ করুন</string>
+    <string name="crash_upload">সমস্যার তথ্য পাঠান</string>
+    <string name="upload_completed">আপলোড সম্পন্ন হয়েছে।</string>
     <string name="ui_mode">Operation Bar UI Mode</string>
     <string name="ui_auto">Auto</string>
     <string name="open_or_search">Open/Search</string>
