Translated more than 50 lines into Bengali

--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -238,90 +238,90 @@
     <string name="skin_transparent">স্বচ্ছ</string>
 
     <string name="block_popup">পর্দায় জেগে ওঠা বার্তা ব্লক করুন</string>
-    <string name="open_window_hint">Website is trying to open a new window</string>
+    <string name="open_window_hint">ওয়েবসাইটটি নতুন একটি বাতায়ন খুলতে চাইছে</string>
 
-    <string name="action_save_web_page">Save Web Page</string>
-    <string name="action_saved_pages">Saved Web Page</string>
-    <string name="saved_page_successfully">Web page saved successfully. It is in the menu of homepage: Saved Web Page</string>
-    <string name="deleted_failed">"Failed to Delete. The file located in download path: "</string>
+    <string name="action_save_web_page">পাতাটি সেভ করুন</string>
+    <string name="action_saved_pages">সেভ করা পাতাসমূহ</string>
+    <string name="saved_page_successfully">পাতাটি সেভ করা হয়েছে। এটি এখন "সেভ করা পাতাসমূহ" অংশে পাওয়া যাবে।</string>
+    <string name="deleted_failed">ফাইলটি মুছে ফেলা যায়নি: </string>
 
-    <string name="empty_hint">Nothing to show&#8230;</string>
+    <string name="empty_hint">দেখানোর মতো কিছু নেই&#8230;</string>
 
-    <string name="network_log">Network Log</string>
-    <string name="catalog">Catalog</string>
+    <string name="network_log">নেটওয়ার্ক নথি</string>
+    <string name="catalog">তালিকা</string>
 
-    <string name="screenshot_hint">There may be compatibility issues in Android 5.0+ to take a full screenshot of website. We are still looking for solutions.</string>
+    <string name="screenshot_hint">অ্যান্ড্রয়েড ৫.০+ চালিত ফোনে ওয়েবসাইটের পুরো স্ক্রিনশট তুলতে সমস্যা হতে পারে। সমস্যাটি সমাধানের চেষ্টা চলছে।</string>
 
-    <string name="conn_timeout">Connection timed out</string>
+    <string name="conn_timeout">সংযোগের সময় শেষ!</string>
 
-    <string name="already_default">It has already been set as default</string>
+    <string name="already_default">এটি পূর্বনির্ধারিত করা রয়েছে।</string>
 
-    <string name="set_to_default">It will be set as default after opening link(%s), please choose via to open the link.</string>
+    <string name="set_to_default">(%s) লিংকটি খোলার পর এটি "পূর্বনির্ধারিত" হিসেবে ঠিক হবে। তাই লিংকটি খুলতে Via অ্যাপটি পছন্দ করুন।</string>
 
-    <string name="quick_back_desc">There may be compatibility issues when you enable this option. You should disable it if going back doesn\'t  work.</string>
-    <string name="sync_prompt">It will overwrite your current local bookmark and settings. Continue?</string>
-    <string name="upload_prompt">It will upload your current local bookmark and settings. Continue?</string>
-    <string name="none">None</string>
-    <string name="action_log">Network Log</string>
-    <string name="check_permission">Permission denied. Set it in settings now?</string>
-    <string name="need_permission_hint">Via needs the following permissions to work.\n\n</string>
-    <string name="storage_permission">Storage: for downloading files from the browser and importing/exporting bookmarks etc.\n\n</string>
-    <string name="location_permission">Location: for sites like Google Maps, it is disabled by default in settings and displays a pop-up asking if a site may use your location when it is enabled.\n\n</string>
-    <string name="phone_permission">Phone: for getting your non-privacy Android device info to do simple statistics and collect error exception when FC.\n\n</string>
-    <string name="force_cancel">Force close</string>
-    <string name="restore_tabs_hint">Restore the unclosed tabs from the last time?</string>
-    <string name="restore_tabs">Restore Tabs on Startup</string>
-    <string name="install_success">Installation Successful!!!</string>
-    <string name="uninstall_success">Uninstallation Successful!!!</string>
-    <string name="online_addons">Online Add-ons</string>
-    <string name="log_page_hint">The blocked list is in %1$s\nYou can edit it to change list, or long press the following item to select block or not.</string>
-    <string name="fullscreen_0">Disable</string>
-    <string name="fullscreen_1">Scroll to hide/show</string>
-    <string name="fullscreen_2">Click to hide/show</string>
-    <string name="settings_script">Scripts</string>
-    <string name="get_more_script">Get More Scripts</string>
-    <string name="add_script">Add Script</string>
-    <string name="script_url">domain or * (* means all)</string>
-    <string name="script_code">code (Javascript)</string>
-    <string name="clear_all_script">Clear All Scripts</string>
-    <string name="toast_copy_domain_successful">Domain copied successfully</string>
-    <string name="go_together">Go together</string>
-    <string name="help_us_translate">Help us translate</string>
-    <string name="confirm_to_leave">Confirm to leave</string>
-    <string name="leave">Leave</string>
-    <string name="stay">Stay</string>
-    <string name="skin_logo">Logo</string>
-    <string name="skin_bg">Background</string>
-    <string name="skin_style">Style</string>
-    <string name="skin_settings">Settings</string>
-    <string name="set_it_as_homepage">Set it as homepage?</string>
-    <string name="missing_webview">Android System WebView isn\'t installed correctly. Do you want to install it now?</string>
-    <string name="install">Install</string>
-    <string name="crash_hint">We\'re very sorry that the app crashed.</string>
-    <string name="upload_hint">We\'re very sorry that the app crashed, but you can upload crash log to help us do better. Upload now?</string>
+    <string name="quick_back_desc">অপশনটি ফোনে সমর্থিত নাও হতে পারে। সেক্ষেত্রে আপনাকে অপশনটি বন্ধ করে দিতে হবে।</string>
+    <string name="sync_prompt">এটি বুকমার্কসমূহ এবং সেটিংস আগের মতো করে ফেলবে। চালিয়ে যেতে চান?</string>
+    <string name="upload_prompt">এটি বর্তমান বুকমার্কসমূহ এবং সেটিংস আপলোড করবে। আপনি কি নিশ্চিত?</string>
+    <string name="none">কোনটিই নয়</string>
+    <string name="action_log">নেটওয়ার্ক নথি</string>
+    <string name="check_permission">অনুমতি অগ্রাহ্য করা হয়েছে। সেটিংসে গিয়ে ঠিক করতে চান?</string>
+    <string name="need_permission_hint">Via অ্যাপটি ঠিকঠাকমতো কাজ করার জন্য নিম্নোক্ত অনুমতিসমূহ প্রয়োজন: \n\n</string>
+    <string name="storage_permission">স্টোরেজ: ফাইল ডাউনলোড করার জন্য\n\n</string>
+    <string name="location_permission">লোকেশন: গুগল ম্যাপস এর মতো ওয়েবসাইটের জন্য। এটি সাধারণত বন্ধ করা থাকে, শুধুমাত্র কোন ওয়েবসাইট অনুরোধ করলে আপনার অনুমোদনক্রমে তথ্যটি দেয়া হবে।\n\n</string>
+    <string name="phone_permission">ফোন: আপনার ফোনের সাধারণ তথ্য সংগ্রহের জন্য। এটি আমাদের পরিসংখ্যানে এবং সমস্যা সমাধানে কাজে লাগবে।\n\n</string>
+    <string name="force_cancel">জোর করে বন্ধ করুন</string>
+    <string name="restore_tabs_hint">হঠাৎ বন্ধ হওয়া ট্যাবগুলো ফিরিয়ে আনতে চান?</string>
+    <string name="restore_tabs">অ্যাপ চালুর সময় আগের ট্যাবসমূহ ফিরিয়ে আনুন</string>
+    <string name="install_success">সফলভাবে ইন্সটল করা হয়েছে!</string>
+    <string name="uninstall_success">আনইন্সটল করা হয়েছে!</string>
+    <string name="online_addons">অনলাইন অ্যাড-অনসমূহ</string>
+    <string name="log_page_hint">ব্লকলিস্টটি এই ঠিকানায় রয়েছে: %1$s\n আপনি এটি পরিবর্তন করতে পারেন অথবা একটি লিংকে কিছুক্ষণ চেপে রেখে সেটি ব্লকলিস্ট থেকে মুছে ফেলতে পারেন।</string>
+    <string name="fullscreen_0">বন্ধ রাখুন</string>
+    <string name="fullscreen_1">উপর/নিচে যাওয়ার সময় পুরো পর্দায় দেখুন</string>
+    <string name="fullscreen_2">ক্লিক করে ঠিক করুন</string>
+    <string name="settings_script">স্ক্রিপসমুহ</string>
+    <string name="get_more_script">আরো স্ক্রিপ্ট খুঁজুন</string>
+    <string name="add_script">স্ক্রিপ্ট যুক্ত করুন</string>
+    <string name="script_url"> নির্দিষ্ট ডোমেইন অথবা * (* মানে সব ডোমেইন)</string>
+    <string name="script_code">কোড (জাভাস্ক্রিপ্ট)</string>
+    <string name="clear_all_script">সব স্ক্রিপ্ট মুছে ফেলুন</string>
+    <string name="toast_copy_domain_successful">ডোমেইনটি কপি করা হয়েছে</string>
+    <string name="go_together">একসাথে এগিয়ে যান</string>
+    <string name="help_us_translate">অনুবাদে সাহায্য করুন</string>
+    <string name="confirm_to_leave">বেরিয়ে যেতে চান?</string>
+    <string name="leave">বেরিয়ে যান</string>
+    <string name="stay">থাকুন</string>
+    <string name="skin_logo">লোগো</string>
+    <string name="skin_bg">দৃশ্যপট</string>
+    <string name="skin_style">স্টাইল</string>
+    <string name="skin_settings">সেটিংস</string>
+    <string name="set_it_as_homepage">এটিকে নীড়পাতা হিসেবে ঠিক করতে চান?</string>
+    <string name="missing_webview">Android System WebView ফোনে ঠিকমতো ইন্সটল করা নেই। আপনি কি এটি ইন্সটল করতে চান?</string>
+    <string name="install">ইন্সটল</string>
+    <string name="crash_hint">আমরা খুবই দুঃখিত</string>
+    <string name="upload_hint">Crash Log টি আপলোড করলে আমাদের সমস্যাটি বুঝতে সুবিধা হবে। আপনি কি সেটি আপলোড করে দেবেন?</string>
     <string name="glean">Glean</string>
-    <string name="contact_us">Contact us</string>
-    <string name="official_website">Official website</string>
-    <string name="current_language">Current language</string>
-    <string name="download_manager">Download manager</string>
-    <string name="background_opacity">The opacity of background</string>
-    <string name="action_pic_mode">Picture Mode</string>
-    <string name="block_it_temporarily">Block it temporarily</string>
-    <string name="find_next">Find next</string>
-    <string name="find_pre">Find last</string>
-    <string name="action_open_in_background">Open in Background</string>
-    <string name="cannot_work">Can only work on \"http\" or \"https\" URLs.</string>
-    <string name="action_fullscreen">Fullscreen</string>
-    <string name="action_ua">User Agent</string>
-    <string name="settings_general">General</string>
-    <string name="no_bookmark">No bookmark~</string>
-    <string name="import_or_export_bookmarks">Import/Export bookmarks</string>
-    <string name="what_is_next">What\'s next?</string>
-    <string name="import_">Import bookmarks</string>
-    <string name="export_">Export bookmarks</string>
-    <string name="pull_to_refresh_gesture">Pull to Refresh Gesture</string>
-    <string name="back_forward_gesture">Back Forward Gesture</string>
-    <string name="toolbar_settings_hint">Click the following button to set its long press (slide) event, and long press it to see what has been set.</string>
+    <string name="contact_us">আমাদের সাথে যোগাযোগ করুন</string>
+    <string name="official_website">অফিশিয়াল ওয়েবসাইট</string>
+    <string name="current_language">বর্তমান ভাষা</string>
+    <string name="download_manager">ডাউনলোড ব্যবস্থাপনা</string>
+    <string name="background_opacity">দৃশ্যপটের স্বচ্ছতা</string>
+    <string name="action_pic_mode">চিত্র মোড</string>
+    <string name="block_it_temporarily">সাময়িকভাবে ব্লক করুন</string>
+    <string name="find_next">পরের মিল</string>
+    <string name="find_pre">আগের মিল</string>
+    <string name="action_open_in_background">পটভূমিতে খুলুন</string>
+    <string name="cannot_work">শুধুমাত্র \"http\" or \"https\" ইউআরএলে কাজ করবে</string>
+    <string name="action_fullscreen">পুরো পর্দা</string>
+    <string name="action_ua">ইউজার এজেন্ট</string>
+    <string name="settings_general">সাধারণ</string>
+    <string name="no_bookmark">কোন বুকমার্ক নেই</string>
+    <string name="import_or_export_bookmarks">বুকমার্ক সংরক্ষণ/আনয়ন</string>
+    <string name="what_is_next">এরপর কী?</string>
+    <string name="import_">বুকমার্ক ফিরিয়ে আনুন</string>
+    <string name="export_">বুকমার্ক সংরক্ষণ করুন</string>
+    <string name="pull_to_refresh_gesture">ইশারা: নিচে টেনে রিফ্রেশ</string>
+    <string name="back_forward_gesture">ইশারা: ডানে/বামে টেনে আগের/পরের পাতায় যাওয়া</string>
+    <string name="toolbar_settings_hint">বোতামে ক্লিক করে এটিতে নতুন কিছু নির্ধারণ করুন। এখন কি আছে সেটি জানার জন্য বোতামটি চেপে ধরে রাখুন।</string>
     <string name="action_modify">Modify</string>
     <string name="operation_hint">Gestures, shortcuts, etc.</string>
     <string name="empty_ads_mark_hint">No ads marked. \nYou can long press the ad in web page then select \"Mark as Ad\" to block it.</string>
